# Restaurant-online

./: README.md  pyproject.toml
src/Restaurant/Restaurant/: settings.py  urls.py
src/Restaurant/app1/: models.py
src/Restaurant/app1/templates/: index.html
