[tool.poetry]
name = "restaurant-online"
version = "0.1.0"
description = ""
authors = ["IvanIsak2000 <vingving648@gmail.com>"]
readme = "README.md"
packages = [{include = "restaurant_online"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
